tests/tsc-references/internalModules/importDeclarations/invalidImportAliasIdentifiers/input.ts/es2015.2.minified/output.js
var E, E1;
(E1 = E || (E = {
}))[E1.Red = 0] = "Red", E1[E1.Blue = 1] = "Blue";
export { };
